--- a/Widgets/Widgets.csproj
+++ b/Widgets/Widgets.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutForm.designer.cs">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Icons.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -54,6 +60,9 @@
       <DependentUpon>Icons.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AboutForm.resx">
+      <DependentUpon>AboutForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Icons.resx">
       <DependentUpon>Icons.cs</DependentUpon>
     </EmbeddedResource>
